tests/should-not-compile/null-bool.talc
// EXPECTED ERROR: variable "b" has an initializer of type null
b:bool = null;
